tests/Tree/negative/test009.jvt
-- calling unsupported anoma-get

function main() : * {
  anoma-get(1)
}
